--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,3 @@
 [build]
-  command = "npm run build && mkdir build && cp index.html build && cp -r dist build/dist"
+  command = "npm run build && mkdir build && cp index.html && cp static/img/favicon-16x16.png && cp build && cp -r dist build/dist"
   publish = "build"
