--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,3 @@
 [build]
-  command = "npm run build && mkdir build && cp index.html build && cp favicon.png dist && cp -r dist build/dist"
+  command = "npm run build && mkdir build && cp index.html build && cp public/favicon.png build && cp -r dist build/dist"
   publish = "build"
