--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "babel-preset-stage-3": "^6.24.1",
     "cross-env": "^5.0.5",
     "css-loader": "^0.28.7",
+    "favicons-webpack-plugin": "0.0.9",
     "file-loader": "^1.1.4",
     "html-webpack-plugin": "^3.2.0",
     "node-sass": "^4.5.3",
