--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "aos": "^3.0.0-beta.6",
+    "axios": "^0.19.0",
     "vue": "^2.5.11",
     "vue-carousel": "^0.18.0"
   },
